force-app/main/default/objects/Account/fields/npo02__OppsClosedLastYear__c.field-meta.xml
<CustomField>
    <fullName>npo02__OppsClosedLastYear__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
    <label>Number of Gifts Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>