force-app/main/default/objects/Account/fields/npo02__SYSTEM_CUSTOM_NAMING__c.field-meta.xml
<CustomField>
    <fullName>npo02__SYSTEM_CUSTOM_NAMING__c</fullName>
    <inlineHelpText>For Household Accounts, specifies which name related fields should not be automatically populated by the Householding code.</inlineHelpText>
    <label>_SYSTEM: CUSTOM NAMING</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Formal_Greeting__c</fullName>
            </value>
            <value>
                <fullName>Informal_Greeting__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>