force-app/main/default/objects/Account/fields/npsp__Membership_Span__c.field-meta.xml
<CustomField>
    <fullName>npsp__Membership_Span__c</fullName>
    <description>The number of years that a member of this Household has had a Membership (read only).</description>
    <formula>year(npo02__MembershipEndDate__c ) - year(npo02__MembershipJoinDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of years that a member of this Household has had a Membership (read only).</inlineHelpText>
    <label>Membership Span</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>