force-app/main/default/objects/Account/fields/Num_grants__c.field-meta.xml
<CustomField>
    <fullName>Num_grants__c</fullName>
    <description>The number of grants linked to this account</description>
    <inlineHelpText>The number of grants linked to this account</inlineHelpText>
    <label>Num grants</label>
    <summaryFilterItems>
        <field>Proposal__c.Grant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Proposal__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>