force-app/main/default/objects/Account/fields/Num_invites__c.field-meta.xml
<CustomField>
    <fullName>Num_invites__c</fullName>
    <description>The number of invite records linked to this account</description>
    <inlineHelpText>The number of invite records linked to this account</inlineHelpText>
    <label>Num invites</label>
    <summaryForeignKey>Invite__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>