force-app/main/default/objects/Account/fields/Num_open_grants__c.field-meta.xml
<CustomField>
    <fullName>Num_open_grants__c</fullName>
    <description>The number of open grants linked to this account</description>
    <inlineHelpText>The number of open grants linked to this account</inlineHelpText>
    <label>Num open grants</label>
    <summaryFilterItems>
        <field>Proposal__c.Status_numeric__c</field>
        <operation>lessThan</operation>
        <value>9.8</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Proposal__c.Status_numeric__c</field>
        <operation>greaterOrEqual</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryForeignKey>Proposal__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>