force-app/main/default/objects/Account/fields/Num_pending_program_grants__c.field-meta.xml
<CustomField>
    <fullName>Num_pending_program_grants__c</fullName>
    <description>The number of program grants under this account that are not closed and are considered &quot;pending&quot;</description>
    <inlineHelpText>The number of program grants under this account that are not closed and are considered &quot;pending&quot;</inlineHelpText>
    <label>Num pending program grants</label>
    <summaryFilterItems>
        <field>Proposal__c.Grant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Proposal__c.Status_numeric__c</field>
        <operation>greaterOrEqual</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Proposal__c.Status_numeric__c</field>
        <operation>lessThan</operation>
        <value>9.2</value>
    </summaryFilterItems>
    <summaryForeignKey>Proposal__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>