force-app/main/default/objects/Account/fields/Num_proposals__c.field-meta.xml
<CustomField>
    <fullName>Num_proposals__c</fullName>
    <description>The number of proposals linked to this account</description>
    <inlineHelpText>The number of proposals linked to this account</inlineHelpText>
    <label>Num proposals</label>
    <summaryForeignKey>Proposal__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>