force-app/main/default/objects/Account/fields/Open_opps__c.field-meta.xml
<CustomField>
    <fullName>Open_opps__c</fullName>
    <description>The total count of all opportunities which are not yet closed.</description>
    <inlineHelpText>The total count of all opportunities which are not yet closed.</inlineHelpText>
    <label>Total open opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>