force-app/main/default/objects/Account/fields/Org_name_ENGLISH__c.field-meta.xml
<CustomField>
    <fullName>Org_name_ENGLISH__c</fullName>
    <description>Translation of prefered org name into English (say, for annual report)</description>
    <inlineHelpText>Translation of prefered org name into English (say, for annual report)</inlineHelpText>
    <label>Org name ENGLISH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>