force-app/main/default/objects/Account/fields/Org_name_GM__c.field-meta.xml
<CustomField>
    <fullName>Org_name_GM__c</fullName>
    <description>The original org name as it came over from the grantmaking db in FileMaker (possibly longer than 80 characters)</description>
    <inlineHelpText>The original org name as it came over from the grantmaking db in FileMaker (possibly longer than 80 characters)</inlineHelpText>
    <label>Org name GM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>