force-app/main/default/objects/Account/fields/Org_name_non_English__c.field-meta.xml
<CustomField>
    <fullName>Org_name_non_English__c</fullName>
    <description>Org name in a language other than English (e.g. Russian or Arabic)</description>
    <inlineHelpText>Org name in a language other than English (e.g Russian or Arabic)</inlineHelpText>
    <label>Org name non English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>