force-app/main/default/objects/Account/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <description>An optional second phone number for this account</description>
    <inlineHelpText>An optional second phone number for this account</inlineHelpText>
    <label>Phone2</label>
    <type>Phone</type>
</CustomField>