force-app/main/default/objects/Account/fields/Preferred_language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_language__c</fullName>
    <description>The language preferred by this group (not necessarily one of our correspondence languages)</description>
    <inlineHelpText>The language preferred by this group (not necessarily one of our correspondence languages)</inlineHelpText>
    <label>Preferred language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>