force-app/main/default/objects/Account/fields/Problematic__c.field-meta.xml
<CustomField>
    <fullName>Problematic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if we&apos;ve had problems with this organization - for example, they have intentionally submitted multiple apps simultaneously with different information</description>
    <inlineHelpText>Checked if we&apos;ve had problems with this organization - for example, they have intentionally submitted multiple apps simultaneously with different information</inlineHelpText>
    <label>Problematic</label>
    <type>Checkbox</type>
</CustomField>