force-app/main/default/objects/Account/fields/Profile_updated__c.field-meta.xml
<CustomField>
    <fullName>Profile_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if there is no unsubmitted profile linked to this account</description>
    <inlineHelpText>Checked if there is no unsubmitted profile linked to this account</inlineHelpText>
    <label>Profile updated</label>
    <type>Checkbox</type>
</CustomField>