force-app/main/default/objects/Account/fields/Recent_grantee__c.field-meta.xml
<CustomField>
    <fullName>Recent_grantee__c</fullName>
    <description>Checked if this is a grantee whose latest grant was within the last five full fiscal years</description>
    <formula>AND(
 Grantee__c,
 IF(MONTH(TODAY()) &gt; 6,
  Date_of_last_grant__c &gt;= DATE(YEAR(TODAY())-5, 7, 1),
  Date_of_last_grant__c &gt;= DATE(YEAR(TODAY())-6, 7, 1)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this is a grantee whose latest grant was within the last five full fiscal years</inlineHelpText>
    <label>Recent grantee</label>
    <type>Checkbox</type>
</CustomField>