force-app/main/default/objects/Account/fields/Red_flag_Black_list__c.field-meta.xml
<CustomField>
    <fullName>Red_flag_Black_list__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The organization is black-listed - see the red flag explanation field for an explanation. (Results in &quot;Account black-listed&quot;.)</description>
    <inlineHelpText>The organization is black-listed - see the red flag explanation field for an explanation. (Results in &quot;Account black-listed&quot;.)</inlineHelpText>
    <label>Red flag: Black-list</label>
    <type>Checkbox</type>
</CustomField>