force-app/main/default/objects/Account/fields/Red_flag_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Red_flag_Explanation__c</fullName>
    <description>An explanation of the red flag assignment for this group</description>
    <inlineHelpText>An explanation of the red flag assignment for this group</inlineHelpText>
    <label>Red flag: Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>