force-app/main/default/objects/Account/fields/Red_flag_Non_black_list__c.field-meta.xml
<CustomField>
    <fullName>Red_flag_Non_black_list__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The organization is &quot;under observation&quot; but not black-listed - see the red flag explanation field for an explanation.</description>
    <inlineHelpText>The organization is &quot;under observation&quot; but not black-listed - see the red flag explanation field for an explanation.</inlineHelpText>
    <label>Red flag: Non black-list</label>
    <type>Checkbox</type>
</CustomField>