force-app/main/default/objects/Account/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <description>How did this group learn about us?</description>
    <inlineHelpText>How did this group learn about us?</inlineHelpText>
    <label>Referral</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Grantee</fullName>
            </value>
            <value>
                <fullName>Intl. Org.</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>