force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Sets Region field with East or West depending on State</description>
    <formula>IF(LEN(BillingState)=0, &quot;None&quot;,
IF(CONTAINS(&quot;AK:AZ:CA:CO:HI:ID:KS:MT:NV:NM:OK:OR:TX:UT:WA:WY:ND:SD:NE:MN:IA:MO:AR:LA&quot;, BillingState), &quot;West&quot;,
IF(CONTAINS(&quot;CT:ME:MA:NH:NY:PA:RI:VT:AL:AR:DC:DE:FL:GA:KY:MD:MS:NC:NJ:SC:TN:VA:WV:IL:IN:MI:NE:OH:WI&quot;, BillingState), &quot;East&quot;, &quot;Unknown&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Region of Donor Account set off Address State - US only</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>