force-app/main/default/objects/Account/fields/Secondary_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supporting staff member working with Donor</description>
    <inlineHelpText>Supporting staff member working with Donor</inlineHelpText>
    <label>Secondary Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>