force-app/main/default/objects/Account/fields/Seeded_by_GFW__c.field-meta.xml
<CustomField>
    <fullName>Seeded_by_GFW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFW was first formal funder to group (2016-2017 survey results still pending)</description>
    <inlineHelpText>GFW was first formal funder to group (2016-2017 survey results still pending)</inlineHelpText>
    <label>Seeded by GFW</label>
    <type>Checkbox</type>
</CustomField>