force-app/main/default/objects/Account/fields/Skype_account__c.field-meta.xml
<CustomField>
    <fullName>Skype_account__c</fullName>
    <description>Skype account name</description>
    <inlineHelpText>Skype account name</inlineHelpText>
    <label>Skype account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>