force-app/main/default/objects/Account/fields/Social_media__c.field-meta.xml
<CustomField>
    <fullName>Social_media__c</fullName>
    <description>Social media pages belonging to this group, for example, twitter and facebook</description>
    <inlineHelpText>Social media pages belonging to this group, for example, twitter and facebook</inlineHelpText>
    <label>Social media</label>
    <type>TextArea</type>
</CustomField>