force-app/main/default/objects/Account/fields/Staff_responsible__c.field-meta.xml
<CustomField>
    <fullName>Staff_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The staff member who is responsible for this account</description>
    <inlineHelpText>The staff member who is responsible for this account</inlineHelpText>
    <label>Staff responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>