force-app/main/default/objects/Account/fields/Sync_Log_Record__c.field-meta.xml
<CustomField>
    <fullName>Sync_Log_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sync Log Record created from sync that brought over source record from GFW.</description>
    <label>Sync Log Record</label>
    <referenceTo>Sync_Log_Record__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>