force-app/main/default/objects/Account/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Priority for donor cultivation (one of Tier 1, Tier 2, Tier 3, Tier 4)</description>
    <inlineHelpText>Priority for donor cultivation (one of Tier 1, Tier 2, Tier 3, Tier 4)</inlineHelpText>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>