force-app/main/default/objects/Account/fields/Total_awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_awarded__c</fullName>
    <description>The total of grants awarded to this group</description>
    <inlineHelpText>The total of grants awarded to this group</inlineHelpText>
    <label>Total awarded</label>
    <summarizedField>Proposal__c.Amount_awarded__c</summarizedField>
    <summaryFilterItems>
        <field>Proposal__c.Grant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Proposal__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>